--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,12 @@ spring: #띄어쓰기 없음
     driver-class-name: org.h2.Driver
   jpa: #띄어쓰기 2칸
     hibernate: #띄어쓰기 4칸
-      ddl-auto: create #띄어쓰기 6칸
+      ddl-auto: none #띄어쓰기 6칸
     properties: #띄어쓰기 4칸
       hibernate: #띄어쓰기 6칸
 # show_sql: true #띄어쓰기 8칸 sout로 출력 (logging debug로 대체)
           format_sql: true #띄어쓰기 8칸
+          default_batch_fetch_size: 100  #fetch join에서 in 안의 개수 , 숫자에 대해서는 미니멈은 없지만 맥시멈은 대게 1000
 
 logging:
   level: #띄어쓰기 없음
